--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+ray = "^1.13.0"
+torch = "^1.11.0"
+pytorch-lightning = "^1.6.4"
+numpy = "^1.23.0"
+pandas = "^1.4.3"
+lifelines = "^0.27.1"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 [tool.semantic_release]
