--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,12 @@ tabulate = "^0.8.10"
 ConfigSpace = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
+sphinx-autoapi = "^1.9.0"
+sphinx-rtd-theme = "^1.0.0"
+myst-nb = "^0.16.0"
+Sphinx = "^5.1.1"
+pytest = "^7.1.2"
+sphinx-paramlinks = "^0.5.4"
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
 branch = "main"                             # branch to make releases of
