--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ myst-nb = "^0.16.0"
 Sphinx = "^5.1.1"
 pytest = "^7.1.2"
 sphinx-paramlinks = "^0.5.4"
+pytest-cov = "^3.0.0"
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
 branch = "main"                             # branch to make releases of
