--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
     needs: ci
 
     # Only run this job if new work is pushed to "master"
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master' && needs.test-api.result == 'success'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
 
     # Set up operating system
     runs-on: ubuntu-latest
