--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pytest-cov = "^3.0.0"
 python-semantic-release = "^7.31.4"
 [tool.semantic_release]
 version_variable = "pyproject.toml:version" # version location
-branch = "main"                             # branch to make releases of
+branch = "master"                             # branch to make releases of
 changelog_file = "CHANGELOG.md"             # changelog file
 build_command = "poetry build"              # build dists
 dist_path = "dist/"                         # where to put dists
