--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Publish to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        user: __token__
+        # user: __token__
         password: ${{ secrets.PYPI_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
 
@@ -83,7 +83,7 @@ jobs:
           pip install \
           --index-url https://test.pypi.org/simple/ \
           --extra-index-url https://pypi.org/simple \
-          cinet
+          cinet 
 
     # - name: Publish to PyPI
     #   uses: pypa/gh-action-pypi-publish@release/v1
