--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -75,7 +75,7 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         # user: __token__
-        password: ${{ secrets.PYPI_TOKEN }}
+        password: ${{ secrets.PYPI_TEST_TOKEN }}
         repository_url: https://test.pypi.org/legacy/
 
     - name: Test install from TestPyPI
@@ -89,4 +89,4 @@ jobs:
     #   uses: pypa/gh-action-pypi-publish@release/v1
     #   with:
     #     user: __token__
-    #     password: ${{ secrets.PYPI_API_TOKEN }}
+    #     password: ${{ secrets.PYPI_TOKEN }}
