--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/setup-python@v2
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx-rtd-theme sphinx-autoapi sphinx-paramlink myst-nb
+          pip install sphinx sphinx-rtd-theme sphinx-autoapi sphinx-paramlinks myst-nb
       - name: Sphinx build
         run: |
           sphinx-build docs _build
