--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-ray = "^2.0"
+ray = "*"
 torch = "^1.11.0"
 pytorch-lightning = "^1.6.4"
 numpy = "^1.23.0"
 pandas = "^1.4.3"
 lifelines = "^0.27.1"
-scikit-learn = "^0.0"
+scikit-learn = "*"
 tabulate = "^0.8.10"
 ConfigSpace = "^0.5.0"
 
